Upgraded with new endpoint and jobs to translate concepts

--- a/config/prompts.ini
+++ b/config/prompts.ini
@@ -6,6 +6,14 @@ sql_generator:
   query: 'Give me the amount of people from 75 to 80 years old living on address with postcode 1031'
   device_map: 'auto'
 }
+translate:
+{
+  action: 'text-generation'
+  instruction: 'Given the following text, your job is to link user’s request to the same context: {} {}.\n'
+  template: 'then translate user’s request in English, German, French and Spanish, Ukrainian and Russian, Italian, Portuguese, Polish, Czech, Slovak, Greek, Swedish, Norwegian, Danish {}'
+  query: 'Give me the amount of people from 75 to 80 years old living on address with postcode 1031'
+  device_map: 'auto'
+}
 sql_generator_age:
 {
   action: 'text-generation'
@@ -30,6 +38,79 @@ titanic_answer:
   query: 'How many people survived from the second class?'
   device_map: 'auto'
 }
+titanic_survived:
+{
+  action: 'text-generation'
+  instruction: 'Given the following SQL table, your job is to write queries given a user’s request. CREATE TABLE {} ({}) \n'
+  template: 'Write a SQL query that returns - {}'
+  query: 'How many people survived from the second class?'
+  device_map: 'auto'
+}
+titanic_johnson:
+{
+  action: 'text-generation'
+  instruction: 'Given the following SQL table, your job is to write queries given a user’s request. CREATE TABLE {} ({}) \n'
+  template: 'Write a SQL query that returns - {}'
+  query: 'Give me back all survived passangers with surname Johnson'
+  device_map: 'auto'
+}
+titanic_questions:
+{
+  action: 'text-generation'
+  instruction: 'Given the following SQL table, your job is to write queries given a user’s request. CREATE TABLE {} ({}) \n'
+  template: 'Write a SQL query that returns - {}'
+  query: 'Give me back possible questions to be answered with table df'
+  device_map: 'auto'
+}
+translate_dutch:
+{
+  action: 'text-generation'
+  instruction: 'text in Dutch is Streek in Oostenrijk met de meeste overnachtingen '
+  template: 'then translate it to English'
+  query: 'then translate it to English'
+  device_map: 'auto'
+}
+classification:
+{
+  action: 'text-generation'
+  instruction: 'I have keywords list: startup ecosystem , venture capital , artificial intelligence , silicon valley , funding round , raised $ , tech startups , generative ai , new york , south africa , united states , middle east , tech startup , north america , startup founders , market research , supply chain , $1 , san francisco , seed funding , social media , digital economy , global market , climate change , saudi arabia , african startups , growth rate , managing director , machine learning , market share , market size , nigerian startups , key players , forecast period , angel investors , vice president , chief executive , stage startups , economic growth , product development , venture capitalists , 1 billion , business model , digital transformation , financial services , $2 , ai startup , industry leaders , market report , southeast asia , tech companies , sam altman , seed round , accelerator program , innovative solutions , startup funding , renewable energy , indian startup , market dynamics , pivotal role , executive officer , latin america , vc funding , 1 million , business development , global startup , looking statements , market growth , small businesses , fintech startup , series b , startup act , pgt innovations , startup support'
+  template: 'remove geographical locations and create hierarchy for those keywords'
+  query: 'then translate it to English'
+  device_map: 'auto'
+}
+declassification:
+{
+  action: 'text-generation'
+  instruction: 'I have keywords list: startup ecosystem , venture capital , artificial intelligence , silicon valley , funding round , raised $ , tech startups , generative ai , new york , south africa , united states , middle east , tech startup , north america , startup founders , market research , supply chain , $1 , san francisco , seed funding , social media , digital economy , global market , climate change , saudi arabia , african startups , growth rate , managing director , machine learning , market share , market size , nigerian startups , key players , forecast period , angel investors , vice president , chief executive , stage startups , economic growth , product development , venture capitalists , 1 billion , business model , digital transformation , financial services , $2 , ai startup , industry leaders , market report , southeast asia , tech companies , sam altman , seed round , accelerator program , innovative solutions , startup funding , renewable energy , indian startup , market dynamics , pivotal role , executive officer , latin america , vc funding , 1 million , business development , global startup , looking statements , market growth , small businesses , fintech startup , series b , startup act , pgt innovations , startup support'
+  template: 'produce RDF with possible relationships using SKOS'
+  query: 'then translate it to English'
+  device_map: 'auto'
+}
+declassification2:
+{
+  action: 'text-generation'
+  instruction: 'I have keywords list: startup ecosystem , venture capital , artificial intelligence , silicon valley , funding round , raised $ , tech startups , generative ai , new york , south africa , united states , middle east , tech startup , north america , startup founders , market research , supply chain , $1 , san francisco , seed funding , social media , digital economy , global market , climate change , saudi arabia , african startups , growth rate , managing director , machine learning , market share , market size , nigerian startups , key players , forecast period , angel investors , vice president , chief executive , stage startups , economic growth , product development , venture capitalists , 1 billion , business model , digital transformation , financial services , $2 , ai startup , industry leaders , market report , southeast asia , tech companies , sam altman , seed round , accelerator program , innovative solutions , startup funding , renewable energy , indian startup , market dynamics , pivotal role , executive officer , latin america , vc funding , 1 million , business development , global startup , looking statements , market growth , small businesses , fintech startup , series b , startup act , pgt innovations , startup support'
+  template: 'produce RDF for keyword "startup founders", add related keywords from this keywords list and create description and define possible relationships by using SKOS ontology and skos:broader, skos:narrower'
+  query: 'then translate it to English'
+  device_map: 'auto'
+}
+translate_cbs:
+{
+  action: 'text-generation'
+  instruction: 'text in Dutch is Netto omzet door advies- en PR-bureau\'s: advies bedrijfsprocesbeheer' 
+  template: 'then translate it to French'
+  query: 'then translate it to French'
+  device_map: 'auto'
+}
+summary_cbs:
+{
+  action: 'text-generation'
+  instruction: 'text in Dutch is Netto omzet door advies- en PR-bureau\'s: advies bedrijfsprocesbeheer'
+  template: 'then summarize it in 100 words in Dutch'
+  query: 'then translate it to French'
+  device_map: 'auto'
+}
+
 other_config_items:
 {
   whatever : 'you want'
