--- a/config/prompts.ini
+++ b/config/prompts.ini
@@ -9,9 +9,17 @@ sql_generator:
 translate:
 {
   action: 'text-generation'
-  instruction: 'Given the following text, your job is to link user’s request to the same context: {} {}.\n'
-  template: 'then translate user’s request in English, German, French and Spanish, Ukrainian and Russian, Italian, Portuguese, Polish, Czech, Slovak, Greek, Swedish, Norwegian, Danish {}'
+  instruction: 'Given the following text, your job is to link user’s request to the same context defined by this text: "{}".\nuser’s request "{}"\n'
+  template: 'Translate user’s request precisely in English, Dutch, German, French and Spanish, Ukrainian and Russian, Italian, Portuguese, Polish, Czech, Slovak, Greek, Swedish, Norwegian, Danish. Provide short description in English up to 50 words. {}'
   query: 'Give me the amount of people from 75 to 80 years old living on address with postcode 1031'
+  device_map: 'auto'
+}
+main_keywords:
+{
+  action: 'text-generation'
+  instruction: 'Given the following sentence, your job is to extract all main keywords given a user’s request.\n'
+  template: 'return the list of possible keywords to query Google to find information on '
+  query: 'Give me result in json to get keywords from the text: which dutch companies are active in Russia'
   device_map: 'auto'
 }
 sql_generator_age:
