.env sample updated with cuda parameter

--- a/env.sample
+++ b/env.sample
@@ -1,4 +1,7 @@
 TOKEN=YOU_HUGGINGFACETOKEN
+cudaversion=cuda11
+gpucount=1
+max_split_size_mb=512
 DATADIR=./data
 MODELS=PATH_TO_YOUR_MODELS
 CONFIG=./config/prompts.ini
