--- a/env.sample
+++ b/env.sample
@@ -1,9 +1,22 @@
-TOKEN=YOU_HUGGINGFACETOKEN
+TEST=TEST2312333333x33
+llmport=80
 cudaversion=cuda11
 gpucount=1
 max_split_size_mb=512
+TOKEN=hf_c....
+MIN_SENTENCE_SIZE=10
 DATADIR=./data
-MODELS=PATH_TO_YOUR_MODELS
+MODELS=/ramdisk/huggingface
 CONFIG=./config/prompts.ini
+CONFIGFILE=prompts.ini
+GRAPHDIR=./config
 DATAPATH=/data
-MODEL=PATH_TO_YOUR_MODEL
+MODEL=HuggingFaceH4/zephyr-7b-alpha
+#MODEL=Rijgersberg/GEITje-7B
+OLLAMA_API=http://ollama:11434
+DIDAPI=http://10.147.18.160:8010
+NERAPI=http://10.147.18.193:8092
+LLAMAMODEL=llama2
+ALTLLAMAMODEL=mistral-openorca:latest
+LLMRAMAPI=https://api.zandbak.dans.knaw.nl
+LLMAPI=http://ollama:11434
