Translation prompts updated

--- a/config/prompts.ini
+++ b/config/prompts.ini
@@ -9,6 +9,14 @@ sql_generator:
 translate:
 {
   action: 'text-generation'
+  instruction: 'Given the following text, your job is to link user’s request to the same context defined by this text: "{}".\nuser’s request "{}"\n'
+  template: 'Translate user’s request precisely in English, Dutch, German, French and Spanish, Ukrainian and Russian, Italian, Portuguese, Polish, Czech, Slovak, Greek, Swedish, Norwegian, Danish. Provide short description in English up to 50 words. {}'
+  query: 'Give me the amount of people from 75 to 80 years old living on address with postcode 1031'
+  device_map: 'auto'
+}
+translateX:
+{
+  action: 'text-generation'
   instruction: 'Given the following text, your job is to link user’s request to the same context: {} {}.\n'
   template: 'then translate user’s request in English, German, French and Spanish, Ukrainian and Russian, Italian, Portuguese, Polish, Czech, Slovak, Greek, Swedish, Norwegian, Danish {}'
   query: 'Give me the amount of people from 75 to 80 years old living on address with postcode 1031'
