--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,10 +27,11 @@ services:
        - "LLMRAMAPI"
        - "LLMAPI"
        - "GRAPHDIR"
-       - MAX_WORKERS=10
-       - WEB_CONCURRENCY=10
+       - "TRANSLATOR"
+       - "MAX_WORKERS"
+       - "WEB_CONCURRENCY"
        - "--n_samples=1"
-       - PYTORCH_CUDA_ALLOC_CONF=max_split_size_mb:512
+       - "PYTORCH_CUDA_ALLOC_CONF=max_split_size_mb:512"
        - "OLLAMA_API"
        - "DEBUG=1234567801"
       ports:
