--- a/env.sample
+++ b/env.sample
@@ -20,3 +20,6 @@ LLAMAMODEL=llama2
 ALTLLAMAMODEL=mistral-openorca:latest
 LLMRAMAPI=https://api.zandbak.dans.knaw.nl
 LLMAPI=http://ollama:11434
+TRANSLATOR='translate'
+MAX_WORKERS=10
+WEB_CONCURRENCY=10
